--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/drawer": "^6.6.6",
     "@wuba/react-native-echarts": "^1.2.5",
+    "axios": "^1.6.7",
     "expo": "~50.0.2",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
@@ -22,6 +23,7 @@
     "expo-web-browser": "~12.8.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/axios": "^0.14.0",
     "@types/color": "^3.0.6",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
