--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wuba/react-native-echarts": "^1.2.5",
     "axios": "^1.6.7",
     "expo": "~50.0.2",
+    "expo-blur": "^12.9.2",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.4",
