--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@react-navigation/drawer": "^6.6.6",
     "@wuba/react-native-echarts": "^1.2.5",
     "axios": "^1.6.7",
-    "expo": "~50.0.2",
+    "expo": "^50.0.8",
     "expo-blur": "^12.9.2",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.4",
+    "expo-router": "^3.4.7",
     "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.1",
+    "expo-web-browser": "^12.8.2",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
